--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
           <i class="fas fa-laptop-code text-dark me-2"></i>
           Freelance Web Developer
         </h5>
-        <span class="text-muted fst-italic">2021 – Present</span>
+        <span class="text-muted fst-italic">2024 – Present</span>
       </div>
       <p class="text-secondary mt-2">
         Designed and developed clean, responsive, and user-friendly websites using HTML, CSS, JavaScript, 
@@ -333,23 +333,23 @@
     
     <!-- contact -->
     <h3 class="fw-bold text-uppercase text-white mb-3">Contact</h3>
-    <form
+<form
   action="https://formspree.io/f/mdkdqzna"
   method="POST"
+  class="contact-form"
 >
   <label>
     Your email:
-    <input type="email" name="email">
+    <input type="email" name="email" required>
   </label>
   <label>
-    phone number:
-    <input type="text" name="phone">
+    Phone number:
+    <input type="text" name="phone" required>
   </label>
   <label>
     Your message:
-    <textarea name="message"></textarea>
+    <textarea name="message" required></textarea>
   </label>
-  <!-- your other form fields go here -->
   <button type="submit">Send</button>
 </form>
     <p class="text-secondary mb-4">Feel free to reach out for collaborations or just a friendly hello!</p>
