--- a/index.html
+++ b/index.html
@@ -328,54 +328,72 @@
 
 
 <!-- Footer -->
-<footer id="contact" class="footer bg-dark text-white py-5">
-  <div class="footer-container">
-    
-    <!-- contact -->
-    <h3 class="fw-bold text-uppercase text-white mb-3">Contact</h3>
-<form
-  action="https://formspree.io/f/mdkdqzna"
-  method="POST"
-  class="contact-form"
->
-  <label>
-    Your email:
-    <input type="email" name="email" required>
-  </label>
-  <label>
-    Phone number:
-    <input type="text" name="phone" required>
-  </label>
-  <label>
-    Your message:
-    <textarea name="message" required></textarea>
-  </label>
-  <button type="submit">Send</button>
-</form>
-    <p class="text-secondary mb-4">Feel free to reach out for collaborations or just a friendly hello!</p>
-    <!--Phone number-->
-     <p class="text-white fw-semibold mb-4">
-      📞 <a href="tel:+2347039280073" class="text-decoration-none text-white">
-      +2347039280073
-      </a>
-     </p>
-    <!-- Email -->
-    <p class="text-white fw-semibold mb-4">
-      📧 <a href="mailto:ejeomavickiebrown1@gmail.com" class="text-decoration-none text-white">
-       ejeomavickiebrown1@gmail.com
-      </a>
-    </p>
+<footer id="contact" class="bg-dark text-white pt-4 pb-2">
+  <div class="container">
 
-    <!-- Social Icons -->
-    <div class="d-flex justify-content-center gap-4 fs-3 mb-3">
-      <a href="https://github.com/babygalijay" class="text-white"><i class="bi bi-github"></i></a>
-      <a href="http://linkedin.com/in/agada-ijeoma-45ab8226b" class="text-white"><i class="bi bi-linkedin"></i></a>
+    <!-- Top Row: Logo | Contact | Socials -->
+    <div class="row align-items-center mb-4">
+      <!-- Logo -->
+      <div class="col-4 col-md-3 text-center text-md-start">
+        <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755780828/LOGO_grroo1.png" 
+             alt="Logo" 
+             class="img-fluid" 
+             style="max-width: 80px;">
+      </div>
+
+      <!-- Contact Header -->
+      <div class="col-4 col-md-6 text-center">
+        <h2 class="fw-bold text-uppercase m-0">Contact</h2>
+      </div>
+
+      <!-- Social Icons -->
+      <div class="col-4 col-md-3 text-center text-md-end fs-4">
+        <a href="https://github.com/babygalijay" class="text-white me-3"><i class="bi bi-github"></i></a>
+        <a href="http://linkedin.com/in/agada-ijeoma-45ab8226b" class="text-white"><i class="bi bi-linkedin"></i></a>
+      </div>
+    </div>
+
+    <!-- Second Row: Contact Form + Phone/Email -->
+    <div class="row mb-4">
+      <!-- Contact Form -->
+      <div class="col-md-6 mb-3">
+        <form action="https://formspree.io/f/mdkdqzna" method="POST" class="bg-light p-3 rounded shadow-sm">
+          <div class="mb-2">
+            <input type="email" name="email" class="form-control form-control-sm" placeholder="Your Email" required>
+          </div>
+          <div class="mb-2">
+            <input type="text" name="phone" class="form-control form-control-sm" placeholder="Phone Number" required>
+          </div>
+          <div class="mb-2">
+            <textarea name="message" class="form-control form-control-sm" placeholder="Your Message" rows="2" required></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary btn-sm w-100">Send</button>
+        </form>
+      </div>
+
+      <!-- Phone & Email -->
+      <div class="col-md-6 d-flex flex-column justify-content-center text-center text-md-end">
+        <p class="fw-semibold mb-1">
+          📞 <a href="tel:+2347039280073" class="text-white text-decoration-none">+2347039280073</a>
+        </p>
+        <p class="fw-semibold mb-1">
+          📧 <a href="mailto:ejeomavickiebrown1@gmail.com" class="text-white text-decoration-none">ejeomavickiebrown1@gmail.com</a>
+        </p>
+      </div>
+    </div>
+
+    <!-- Bottom Row: Copyright -->
+    <div class="row">
+      <div class="col text-center">
+        <p class="text-secondary small mb-0">&copy; 2025 VICKIE BROWN. All Rights Reserved.</p>
+      </div>
     </div>
 
   </div>
 </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Bootstrap Icons -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 </body>
