--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <a class="navbar-brand d-flex align-items-center" href="#">
       <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755780828/LOGO_grroo1.png" alt="Logo" height="40" class="me-2"> 
     </a>
+    <span class="fw-bold fs-5 text-success">VICKIE BROWN</span>
 
     <!-- Mobile Toggle -->
     <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -56,7 +57,7 @@
       Child Tutor, 
       <span class="text-gradient">Agricultural Consultant</span>
     </h1>
-    <p class="lead text-muted mt-3">
+    <p class="lead text-secondary mt-3">
       Crafting digital experiences, nurturing young minds, and providing innovative agricultural solutions.
     </p>
     <a href="#about-me" class="btn btn-success btn-lg mt-3">Learn More</a>
@@ -81,7 +82,7 @@
         <div class="text-dark mb-4">
           <h5>
             <i class="bi bi-flower1 text-success me-2"></i>
-            Agricultural Consultant – <span class="text-success">Akuna Farms</span>
+            Agricultural Consultant <span class="text-success">Akuna Farms</span>
           </h5>
           <p>
             Led initiatives to enhance sustainable farming at Akuna Farms, advising on best practices in crop management and resource optimization. Successfully introduced innovative techniques that improved farm productivity, reduced waste, and boosted overall efficiency for multiple client projects.
@@ -261,7 +262,24 @@
             Open in new tab</a>
         </div>
       </div>
-
+    <!--project 6 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="project-card bg-dark p-3">
+          <h5 class="fw-bold text-center">SOCCER TEAM</h5>
+          <!-- Ratio container -->
+          <div class="ratio ratio-16x9 mb-3">
+            <iframe 
+              src="https://gladiator-soccer-team-rd4k.vercel.app/" 
+              title="SOCCER TEAM"
+              allowfullscreen
+              class="rounded border">
+            </iframe>
+          </div>
+          <a href="https://gladiator-soccer-team-rd4k.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm w-100">
+            Open in new tab</a>
+        </div>
+      </div>
+    
     </div>
   </div>
 </section>
@@ -280,7 +298,7 @@
           <i class="fas fa-seedling text-success me-2"></i>
           Agricultural Consultant – Akuna Farms
         </h5>
-        <span class="text-muted fst-italic">2016 – Present</span>
+        <span class="text-muted fst-italic">2021 – Present</span>
       </div>
       <p class="text-secondary mt-2">
         Provided strategic consulting at Akuna Farms, offering expert guidance on sustainable farming 
@@ -297,7 +315,7 @@
           <i class="fas fa-book-open text-primary me-2"></i>
           Tutor & Educator
         </h5>
-        <span class="text-muted fst-italic">2018 – 2021</span>
+        <span class="text-muted fst-italic">2020– present</span>
       </div>
       <p class="text-secondary mt-2">
         Supported students in mastering complex concepts through personalized tutoring. This experience 
@@ -326,71 +344,66 @@
 </section>
 
 
-
 <!-- Footer -->
-<footer id="contact" class="bg-dark text-white pt-4 pb-2">
+<footer id="contact" class="bg-dark text-white pt-5 pb-3">
   <div class="container">
-
-    <!-- Top Row: Logo | Contact | Socials -->
-    <div class="row align-items-center mb-4">
-      <!-- Logo -->
-      <div class="col-4 col-md-3 text-center text-md-start">
+    <div class="row text-center text-md-start align-items-start">
+      
+      <!-- Left: Logo + Name -->
+      <div class="col-12 col-md-4 mb-4 mb-md-0 d-flex flex-column align-items-center align-items-md-start">
         <img src="https://res.cloudinary.com/dkoeutxie/image/upload/v1755780828/LOGO_grroo1.png" 
              alt="Logo" 
-             class="img-fluid" 
-             style="max-width: 80px;">
+             class="img-fluid mb-2" 
+             style="max-width: 60px;">
+        <h5 class="fw-bold mb-0">VICKIE BROWN</h5>
       </div>
 
-      <!-- Contact Header -->
-      <div class="col-4 col-md-6 text-center">
-        <h2 class="fw-bold text-uppercase m-0">Contact</h2>
+      <!-- Center: Contact Form + Contact Details -->
+      <div class="col-12 col-md-4 mb-4 mb-md-0 d-flex flex-column align-items-center">
+        <!-- Contact Form -->
+        <div class="bg-light text-dark p-3 rounded shadow-sm w-100 mb-3" style="max-width: 320px;">
+          <form action="https://formspree.io/f/mdkdqzna" method="POST">
+            <div class="mb-2">
+              <input type="email" name="email" class="form-control form-control-sm" placeholder="Your Email" required>
+            </div>
+            <div class="mb-2">
+              <input type="text" name="phone" class="form-control form-control-sm" placeholder="Phone Number" required>
+            </div>
+            <div class="mb-2">
+              <textarea name="message" class="form-control form-control-sm" placeholder="Your Message" rows="2" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary btn-sm w-100">Send</button>
+          </form>
+        </div>
+
+        <!-- Contact Details -->
+        <div class="text-center">
+          <p class="fw-semibold mb-1">
+            📞 <a href="tel:+2347039280073" class="text-white text-decoration-none">+2347039280073</a>
+          </p>
+          <p class="fw-semibold mb-0">
+            📧 <a href="mailto:ejeomavickiebrown1@gmail.com" class="text-white text-decoration-none">ejeomavickiebrown1@gmail.com</a>
+          </p>
+        </div>
       </div>
 
-      <!-- Social Icons -->
-      <div class="col-4 col-md-3 text-center text-md-end fs-4">
-        <a href="https://github.com/babygalijay" class="text-white me-3"><i class="bi bi-github"></i></a>
-        <a href="http://linkedin.com/in/agada-ijeoma-45ab8226b" class="text-white"><i class="bi bi-linkedin"></i></a>
-      </div>
-    </div>
-
-    <!-- Second Row: Contact Form + Phone/Email -->
-    <div class="row mb-4">
-      <!-- Contact Form -->
-      <div class="col-md-6 mb-3">
-        <form action="https://formspree.io/f/mdkdqzna" method="POST" class="bg-light p-3 rounded shadow-sm">
-          <div class="mb-2">
-            <input type="email" name="email" class="form-control form-control-sm" placeholder="Your Email" required>
-          </div>
-          <div class="mb-2">
-            <input type="text" name="phone" class="form-control form-control-sm" placeholder="Phone Number" required>
-          </div>
-          <div class="mb-2">
-            <textarea name="message" class="form-control form-control-sm" placeholder="Your Message" rows="2" required></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary btn-sm w-100">Send</button>
-        </form>
-      </div>
-
-      <!-- Phone & Email -->
-      <div class="col-md-6 d-flex flex-column justify-content-center text-center text-md-end">
-        <p class="fw-semibold mb-1">
-          📞 <a href="tel:+2347039280073" class="text-white text-decoration-none">+2347039280073</a>
-        </p>
-        <p class="fw-semibold mb-1">
-          📧 <a href="mailto:ejeomavickiebrown1@gmail.com" class="text-white text-decoration-none">ejeomavickiebrown1@gmail.com</a>
-        </p>
-      </div>
-    </div>
-
-    <!-- Bottom Row: Copyright -->
-    <div class="row">
-      <div class="col text-center">
+      <!-- Right: Social Icons + Copyright -->
+      <div class="col-12 col-md-4 d-flex flex-column align-items-center align-items-md-end">
+        <div class="d-flex gap-3 fs-4 mb-3">
+          <a href="https://github.com/babygalijay" class="text-white"><i class="bi bi-github"></i></a>
+          <a href="http://linkedin.com/in/agada-ijeoma-45ab8226b" class="text-white"><i class="bi bi-linkedin"></i></a>
+          <a href="#" class="text-white"><i class="bi bi-twitter"></i></a>
+          <a href="#" class="text-white"><i class="bi bi-facebook"></i></a>
+        </div>
         <p class="text-secondary small mb-0">&copy; 2025 VICKIE BROWN. All Rights Reserved.</p>
       </div>
-    </div>
 
+    </div>
   </div>
 </footer>
+
+
+
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
