--- a/index.html
+++ b/index.html
@@ -279,8 +279,39 @@
             Open in new tab</a>
         </div>
       </div>
-    
+    <!--project 7-->   
+       <div class="col-md-6 col-lg-4">
+        <div class="project-card bg-dark p-3">
+          <h5 class="fw-bold text-center">CliqPharm</h5>
+          <!-- Ratio container -->
+          <div class="ratio ratio-16x9 mb-3">
+            <iframe 
+              src="https://cliqpharm.vercel.app/" 
+              title="BOOK STORE"
+              allowfullscreen
+              class="rounded border">
+            </iframe>
+          </div>
+          <a href="https://cliqpharm.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm w-100">
+            Open in new tab</a>
+        </div>
     </div>
+    <!--project 8-->
+        <div class="col-md-6 col-lg-4">
+          <div class="project-card bg-dark p-3">
+            <h5 class="fw-bold text-center">EATWITJAY</h5>
+            <!-- Ratio container -->
+            <div class="ratio ratio-16x9 mb-3">
+              <iframe 
+                src="https://eatwitjay-mobile-food-services.vercel.app/" 
+                title="BOOK STORE"
+                allowfullscreen
+                class="rounded border">
+              </iframe>
+            </div>
+            <a href="https://eatwitjay-mobile-food-services.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm w-100">
+              Open in new tab</a>
+          </div>
   </div>
 </section>
 
