--- a/index.html
+++ b/index.html
@@ -303,13 +303,13 @@
             <!-- Ratio container -->
             <div class="ratio ratio-16x9 mb-3">
               <iframe 
-                src="https://eatwitjay-mobile-food-services.vercel.app/" 
+                src="https://eatwi-thjay.vercel.app/" 
                 title="BOOK STORE"
                 allowfullscreen
                 class="rounded border">
               </iframe>
             </div>
-            <a href="https://eatwitjay-mobile-food-services.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm w-100">
+            <a href="https://eatwi-thjay.vercel.app/" target="_blank" class="btn btn-outline-light btn-sm w-100">
               Open in new tab</a>
           </div>
   </div>
