--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
           <div class="ratio ratio-16x9 mb-3">
             <iframe 
               src="https://cliqpharm.vercel.app/" 
-              title="BOOK STORE"
+              title="CliqPharm"
               allowfullscreen
               class="rounded border">
             </iframe>
@@ -304,7 +304,7 @@
             <div class="ratio ratio-16x9 mb-3">
               <iframe 
                 src="https://eatwi-thjay.vercel.app/" 
-                title="BOOK STORE"
+                title="EATWITJAY"
                 allowfullscreen
                 class="rounded border">
               </iframe>
